sayt haqida bitdi

--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
           <a class="underline-hover" href="#">Aloqa</a>
         </li>
         <li>
-          <a class="underline-hover" href="#">Kar24 jamosi</a>
+          <a class="underline-hover" href="kar24team.html">Kar24 jamosi</a>
         </li>
       </ul>
       <div class="footer-nav__18-pluse "><img src="./images/18+.webp" alt=""></div>
